23 August 2017: Wouter
	- Fix #1407: Add ECS options check to unbound-checkconf.
	- make depend
	- Fix to reclaim tcp handler when it is closed due to dnscrypt buffer
	  allocation failure.

22 August 2017: Wouter
	- Fix install of trust anchor when two anchors are present, makes both
	  valid. Checks hash of DS but not signature of new key. This fixes
	  the root.key file if created when unbound is installed between
	  sep11 and oct11 2017.
	- tag 1.6.5 with pointrelease 1.6.5 (1.6.4 plus 5011 fix).
	- trunk version 1.6.6 in development.
	- Fix issue on macOX 10.10 where TCP fast open is detected but not
	  implemented causing TCP to fail. The fix allows fallback to regular
	  TCP in this case and is also more robust for cases where connectx()
	  fails for some reason.
	- Fix #1402: squelch invalid argument error for fd_set_block on windows.

10 August 2017: Wouter
	- Patch to show DNSCrypt status in help output, from Carsten
	  Strotmann.

8 August 2017: Wouter
	- Fix #1398: make cachedb secret configurable.
	- Remove spaces from Makefile.

7 August 2017: Wouter
	- Fix #1397: Recursive DS lookups for AS112 zones names should recurse.

3 August 2017: Ralph
	- Remove unused iter_env member (ip6arpa_dname)
	- Do not reset rrset.bogus stats when called using stats_noreset.
	- Added stats for queries that have been ratelimited by domain
	  recursion.
	- Do not add rrset_bogus and query ratelimiting stats per thread, these
	  module stats are global.

3 August 2017: Wouter
	- Fix #1394: mix of serve-expired and response-ip could cause a crash.

24 July 2017: Wouter
	- upgrade aclocal(pkg.m4 0.29.1), config.guess(2016-10-02),
	  config.sub(2016-09-05).
	- annotate case statement fallthrough for gcc 7.1.1.
	- flex output from flex 2.6.1.
	- snprintf of thread number does not warn about truncated string.
	- squelch TCP fast open error on FreeBSD when kernel has it disabled,
	  unless verbosity is high.
	- remove warning from windows compile.
	- Fix compile with libnettle